--- a/styles.css
+++ b/styles.css
@@ -393,3 +393,9 @@ code:not([class*="language-"]) {
         gap: 1rem;
     }
 }
+
+tt {
+    background: #313131;
+    padding: .1rem .2rem;
+    border-radius: .2rem;
+}
